@@ -2,6 +2,8 @@
 v3.1.2-git
 ----------
 
+[jan] Fix setting excluded addresses and mailing list flag in Sieve vacation
+      rule.
 
 
 ------
